# testnet-substrate

./: README.md  dung.json  dungRaw.json
chains/testnet/: custom.json  customRaw.json
data/validator1/chains/dung/db/: 000034.sst  000035.sst  000036.sst  000037.sst  000038.sst  000039.sst  000041.sst  000098.sst  000101.sst  IDENTITY  LOG  MANIFEST-000042  OPTIONS-000033  OPTIONS-000045
data/validator2/chains/dung/db/: 000034.sst  000035.sst  000036.sst  000037.sst  000038.sst  000039.sst  000041.sst  000098.sst  000101.sst  IDENTITY  LOG  MANIFEST-000042  OPTIONS-000033  OPTIONS-000045
data/validator2/chains/dung/network/: secret_ed25519
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs
pallets/sum-storage/: Cargo.toml
pallets/sum-storage/rpc/: Cargo.toml
pallets/sum-storage/rpc/src/: lib.rs
pallets/sum-storage/runtime-api/: Cargo.toml
pallets/sum-storage/runtime-api/src/: lib.rs
pallets/sum-storage/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/session_keys/: babe1  babe2  gran1  gran2  run.sh
