[package]
name = "sum-storage-runtime-api"
version = "3.0.0"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
sp-api = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
[dev-dependencies]
serde_json = "1.0.64"

[features]
default = ["std"]
std = [
	"sp-api/std",
]